fixed alignment inside expanded items

--- a/frontend/src/styles/components/carousel.scss
+++ b/frontend/src/styles/components/carousel.scss
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     gap: 128px;
     width: 256px;
-    height: 100%;
+    height: 50;
     padding-left: 50%;
     padding-right: 50%;
 
