--- a/frontend/src/styles/components/listingitem.scss
+++ b/frontend/src/styles/components/listingitem.scss
@@ -49,6 +49,7 @@
   }
 
   &-ex {
+
     &-item {
       display: flex;
       flex-direction: column;
@@ -61,9 +62,9 @@
       border: 2px solid rgba(0, 0, 0, 0.3);
       box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 
-      &-header {
-        display: flex;
-
+      &-info {
+        width: 50%;
+        height: 100%;
         &-name {
           font-size: 32px;
         }
@@ -71,15 +72,22 @@
         &-price {
           font-size: 18px;
         }
-
-        & > p {
-          text-align: start;
-          vertical-align: bottom;
-        }
       }
+      
 
       &-description {
+        width: 50%;
+        height: 100%;
+      }
+    }
+
+    &-content{
+      &-wrapper{
+        width: 100%;
+        height: 50%;
+        display: flex;
       }
     }
   }
 }
+  
